# experimental-design

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements-with-tests.txt  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: automated-testing.yml  publish.yml
demo/: README.md  angle.ipynb  angle.py  contrast.ipynb  contrast.py  underlayer.py
examples/: README.md  angle.ipynb  bilayers.ipynb  contrast.ipynb  kinetics.ipynb  magnetism.ipynb  simulation.ipynb  underlayer.ipynb
experimental-design/: README.md  angle.py  angles.py  contrast.py  contrasts.py  design.py  experimental_design.py  kinetics.py  magnetism.py  optimise.py  paper.py  pearson.py  results.py  simulate.py  structures.py  underlayer.py  underlayers.py  utils.py  visualise.py
experimental-design/models/: README.md  base.py  bilayers.py  magnetic.py  monolayers.py  parsing.py  samples.py  subphases.py
experimental-design/paper/: angles.py  kinetics.py
experimental-design/paper/results/DPPC_RaLPS_bilayer/: optimised_angles.txt
experimental-design/results/DMPC_bilayer/: optimised_angles.txt  optimised_contrasts.txt  optimised_underlayers.txt
experimental-design/results/DPPC_RaLPS_bilayer/: optimised_angles.txt  optimised_contrasts.txt  optimised_underlayers.txt
experimental-design/results/DPPG_monolayer/: optimised.txt
experimental-design/results/YIG_sample/: log_ratios_26.csv  log_ratios_80.csv  optimised_angles.txt  optimised_underlayers.txt
experimental-design/results/many_param_sample/: optimised_angles.txt
experimental-design/results/monolayer/: optimised.txt
experimental-design/results/similar_sld_sample_1/: optimised_angles.txt
experimental-design/results/similar_sld_sample_2/: optimised_angles.txt
experimental-design/results/simple_sample/: optimised_angles.txt
experimental-design/results/single_asymmetric_bilayer/: optimised_angles.txt  optimised_angles_D2O.txt  optimised_angles_H2O.txt  optimised_angles_SMW.txt  optimised_contrasts.txt  optimised_underlayers.txt
experimental-design/results/symmetric_bilayer/: optimised_angles.txt  optimised_angles_D2O.txt  optimised_angles_H2O.txt  optimised_angles_SMW.txt  optimised_contrasts.txt  optimised_underlayers.txt
experimental-design/results/thin_layer_sample_1/: optimised_angles.txt
experimental-design/results/thin_layer_sample_2/: optimised_angles.txt
figures/: README.md
hogben/: __init__.py  angles.py  contrasts.py  kinetics.py  magnetism.py  optimise.py  simulate.py  underlayers.py  utils.py  visualise.py
hogben/data/directbeams/: make_beam_spectra.py
hogben/models/: README.md  base.py  bilayers.py  magnetic.py  monolayers.py  parsing.py  samples.py
hogben/tests/: test_fisher.py  test_simulation.py
notebooks/: README.md  angle.ipynb  bilayers.ipynb  contrast.ipynb  kinetics.ipynb  magnetism.ipynb  simulation.ipynb
notebooks/analysis/: bilayers.ipynb  substrate.ipynb
results/DPPG_monolayer/: optimised.txt
src/hogben/: angles.py  contrasts.py  kinetics.py  magnetism.py  optimise.py  simulate.py  underlayers.py  visualise.py
src/hogben/models/: bilayers.py
tests/: test_simulation.py
(+4 files in other folders)
