[metadata]
name = HOGBEN
version = 1.1.2.2023.01.12.01
author = Joshaniel Cooper
author_email = Jos.Cooper@stfc.ac.uk
description = Holistic Optimization for Generating Better Experimental Neutrons - a package for optimzing neutron experiments using the Fisher information 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfkcooper/HOGBEN
project_urls =
    Bug Tracker = https://github.com/jfkcooper/HOGBEN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bumps
    corner
    dynesty
    importlib_resources
    matplotlib
    numpy
    periodictable
    Pillow
    scipy
    refl1d
    refnx
include_package_data = True
