[metadata]
name = HOGBEN
version = attr: hogben.__version__
author = Joshaniel Cooper
author_email = Jos.Cooper@stfc.ac.uk
description = Holistic Optimization for Generating Better Experimental Neutrons - a package for optimzing neutron experiments using the Fisher information 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfkcooper/HOGBEN
project_urls =
    Bug Tracker = https://github.com/jfkcooper/HOGBEN/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    bumps
    corner
    dynesty
    emcee
    importlib_resources
    matplotlib
    numpy
    periodictable
    Pillow
    refl1d
    refnx
    tqdm
    scipy
include_package_data = True

[flake8]
count = True
ignore = E741, W503, W605
inline-quotes = single

# `make_beam_spectra.py` uses a blank star import (F403), 
# which makes it impossible to recognize certain modules (F405)
per-file-ignores =
	make_beam_spectra.py: F403, F405
